--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </div>
 
  
-  <script>
+  <script defer src="/_vercel/insights/script.js">
     // JavaScript for typing animation
     const text = "We're working on something extraordinary. Stay tuned!";
     const placeholder = document.getElementById('typing-animation-placeholder');
