--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       margin-bottom: 40px;
       overflow: hidden; /* Hide overflow */
       white-space: nowrap; /* Prevent text from wrapping */
-      animation: typing 4s steps(40) forwards; /* Typing animation */
+      animation: typing 8s steps(40) forwards; /* Typing animation */
       width: 0; /* Initially hide the text */
       margin: 0 auto; /* Center-align the text */
     }
@@ -117,8 +117,9 @@
   
   <div class="container">
     <h1>Coming Soon</h1>
-    <p>We're working on something extraordinary. Stay tuned!</p>
-  </div>
+    <p class="typing-animation" id="typing-animation-placeholder">We're working on something extraordinary. Stay tuned!</p>
+    <span class="text-cursor"></span>
+  <div>
 
   <div class="text-holder">
     <a href="https://chat.openai.com/c/ec8d1554-41ba-4612-a43a-ae80fc67875f" style="color: white;">created via ChatGPT</a>
